--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=config-server
 server.port=9050
 #设置服务注册中心地址，指向另一个注册中心
-eureka.client.serviceUrl.defaultZone=http://dpb:123456@eureka1:8761/eureka/,http://dpb:123456@eureka2:8761/eureka/
-
+eureka.client.serviceUrl.defaultZone=http://dpb:123456@eureka1:8761/eureka/
+#  ,http://dpb:123456@eureka2:8761/eureka/
 #Git 配置
 spring.cloud.config.server.git.uri=https://gitee.com/dengpbs/config
 #spring.cloud.config.server.git.username=
